--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
   "name": "New Relic Server Annotation",
-  "version": "0.1",
+  "version": "0.2",
   "manifest_version": 2,
-  "description": "Chrome extension to add naming tags to your server list, making it easier to find the specific server you are looking for in the list",
+  "description": "Extension to add naming tags to your New Relic server list",
   "icons": { 
     "16": "icon16.png",
     "48": "icon48.png",
     "128": "icon128.png" 
   },
-  "browser_action": { },
+  "browser_action": { "default_icon": "icon19.png" },
   "permissions": [ "tabs", "storage", "https://*.newrelic.com/" ],
   "web_accessible_resources": [ "form.html" ],
   "content_scripts": [ {
